add inline and embedded style for header

--- a/index.html
+++ b/index.html
@@ -5,10 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Basic Semantic Layout Exercise</title>
+    <style>
+        .navLink {
+            float: left;
+        }
+    </style>
 </head>
-<body>
+<body style="padding: 0; margin: 0; text-align: center;">
     <!-- HEADER SECTION -->
+    <header style="background-color: rgb(255, 233, 204); padding: 0; margin: 0;">
+        <h1>HEADER</h1>
     <!-- NAVIGATION SECTION -->
+        <nav style="background-color: rgb(173, 255, 200); padding: 0; margin: 0;">
+            <ul style="list-style-type: none; height: 20px;">
+                <li class="navLink"><a href="#">Home</a></li>
+                <li class="navLink"><a href="#">About</a></li>
+                <li class="navLink"><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
     <!-- MAIN SECTION -->
     <!-- SECTION 1 -->
     <!-- ARTICLE SECTION -->
