--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     </style>
 </head>
 <body style="padding: 0; margin: 0; text-align: center;">
-    <!-- HEADER SECTION -->
+<!-- HEADER SECTION -->
     <header style="background-color: rgb(255, 233, 204); padding: 0; margin: 0;">
         <h1>HEADER</h1>
-    <!-- NAVIGATION SECTION -->
+<!-- NAVIGATION SECTION -->
         <nav style="background-color: rgb(173, 255, 200); padding: 0; margin: 0;">
             <ul style="list-style-type: none; height: 20px;">
                 <li class="navLink"><a href="#">Home</a></li>
@@ -24,10 +24,37 @@
             </ul>
         </nav>
     </header>
-    <!-- MAIN SECTION -->
-    <!-- SECTION 1 -->
-    <!-- ARTICLE SECTION -->
-    <!-- ASIDE -->
-    <!-- SECTION 2 -->
+<!-- MAIN SECTION -->
+    <main style="background-color: palevioletred;">
+        <h2>MAIN CONTENT</h2>
+<!-- SECTION 1 -->
+        <section style="background-color: red; height: 100%; width: 30%; float: right;">
+<!-- ASIDE -->
+            <h3>ASIDE</h3>
+            <ul>
+                <li>Unordered List Item</li>
+                <li>Unordered List Item</li>
+                <li>Unordered List Item</li>
+                <li>Unordered List Item</li>
+                <li>Unordered List Item</li>
+            </ul>
+            <ol>
+                <li>Ordered List</li>
+                <li>Ordered List</li>
+                <li>Ordered List</li>
+                <li>Ordered List</li>
+                <li>Ordered List</li>
+            </ol>
+            <dl style="text-align: left;">
+                <dt>Coffee</dt>
+                <dt>Hot and Cold</dt>
+                <dt>Milk Tea</dt>
+                <dt>Cold and Sweet</dt>
+            </dl>
+        </section>
+    </main>
+<!-- ARTICLE SECTION -->
+<!-- ASIDE -->
+<!-- SECTION 2 -->
 </body>
 </html>
